# Broceliande

./: .travis.yml  Broceliande.cabal  README.md  stack.yaml
src/: BST.hs  WBT.hs
