name:                Broceliande
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/n-osborne/Broceliande#readme
license:             BSD3
license-file:        LICENSE
author:              Nicolas Osborne
maintainer:          nicolas.osborne4@gmail.com
copyright:           Copyright (c) 2018 Nicolas Osborne
category:            value
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BST WBT
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/n-osborne/Broceliande
